@@ -1,6 +1,9 @@
 Revision history for Perl extension FSA::Rules.
 
 0.31
+      - Added `state_params` parameter to `new()`. The specified hash
+        reference will be passed as a list to the `state_class` constructor.
+        Patch from Chia-liang Kao.
 
 0.30  2012-03-06T05:03:37Z
       - Fixed broken rt.cpan.org email address.
